# reaction-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: app-logs.yml  ci.yml  classify-goals.yml  cleanup-duplicate-plans.yml  deploy.yml  migrate.yml  notify-frontend.yml  preview-expire-reflections.yml  provision-vapid.yml  toggle-scheduler.yml
alembic/: env.py
alembic/versions/: 235ce4f5c94c_create_execution_and_recovery_tables_2_d.py  59acd6c5f086_create_all_tables_aligned_with_db_v0_7_.py  9f7c7958ccc8_create_user_and_onboarding_tables_2_b.py  b1f2a3c4d5e6_create_plan_drafts.py  c2d3e4f5a6b7_create_user_consents.py  (+4 more)
docs/: BUDGET.md  DEPLOY.md  DEPLOY_AWS.md  api-change-log.md  api-contract.md  api-testing.md  architecture.md  cicd.md  erd-diff.md
scripts/: classify_goals.py  cleanup_duplicate_plans.py  db_reset.py  db_seed_demo.py  demo_smoke.py  preview_expire_reflections.py  prompt_lab.py  prompt_playground.py
tests/: conftest.py  test_action_status_immutability.py  test_auth.py  test_banned_words.py  test_calendar.py  test_classify_goals.py  test_cleanup_duplicate_plans.py  test_config.py  test_db.py  test_errors.py  test_execution_checkin.py  test_first_plan_busy.py  test_fixed_schedules.py  test_goals.py  test_habit_penalty.py  test_habits.py  test_health.py  test_idempotency.py  test_inbox.py  test_interview.py  test_interview_route.py  test_interview_runner.py  test_interview_storage.py  test_kst_serialization.py  test_logging_records.py  test_materialize_goals.py  test_notification_send_repo_sql.py  test_notifications.py  test_notify_sweeps.py  test_onboarding.py  test_orchestrator_handoff.py  test_plan_approve_replace.py  test_plan_draft_expiry.py  test_plan_scheduler.py  test_planning.py  test_planning_route.py  test_planning_weekly.py  test_policy_snapshot.py  test_policy_snapshot_repo_sql.py  test_preview_expire_reflections.py  (+21 more)
(+190 files in other folders)
